# WisdomPrompt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ecosystem.config.cjs  origin_idea_copy.md
.githooks/: pre-commit  pre-push
.project_info_for_ai/: api-collaboration.md  api_development.md  changelog.md  project_process.md  task_graph.json  task_graph_archive.json
api_examples/: brave_search.py  exa_search.py  jina.py  llm.py  milvus.py  requirements.txt  serper_search.py  (+2 more)
backend/: .env.example  main.py  pyproject.toml  requirements.txt  wisdomprompt.db
backend/api/: routes.py
backend/api/endpoints/: health.py  workflow.py
backend/app/: config.py  db.py  events.py  main.py  models.py  orchestrator.py  schemas.py
backend/app/prompts/: step1_query_split.md  step3_summarize.md  step4_final_answer.md
backend/app/providers/: embedder.py  llm.py  openai_http.py  vector_store.py
backend/app/providers/search/: arxiv.py  base.py  exa.py  github.py  serper.py
backend/core/: config.py  logging_config.py
backend/models/: __init__.py  schemas.py
backend/prompts/: cc_create_subagent_prompt.json  cc_subagent_sys_prompt.md  cc_subagent_user_prompt.md  final_answer.txt  query_decompose.txt  sub_task_summarize.txt
backend/scripts/: bench_content_fetch.py  compare_webfetch_vs_readability.py  verify_content_fetch.py  verify_retrieval.py
backend/services/: __init__.py  agent.py  content_fetch.py  embedding.py  search.py  vector_store.py  workflow.py
backend/tests/: test_llm_nvidia.py  test_llm_openai.py  test_runs.py  test_vector_store_milvus.py
(+42 files in other folders)
